@@ -1,10 +1,15 @@
 <!-- markdownlint-disable MD033 -->
 <p align="center">
-  <a href="https://powernukkitx.org"><img src=".github/logo.png" alt="PowerNukkitX Logo" width="150"></a>
-</p>
-
-<p align="center">
-  <strong>A Minecraft Bedrock Edition Server Software, open source and written in java</strong>
+    <a href="https://powernukkitx.org">
+      <img src="https://avatars.githubusercontent.com/u/99014792" width=20% alt="PNX Logo">
+    </a>
+    <p align="center">
+        <strong>
+            A Minecraft Bedrock Edition Server Software, open source and written in java
+            <br>
+            Not affiliated with Mojang AB.
+        </strong>
+    </p>
 </p>
 
 <p align="center">
@@ -18,50 +23,35 @@
   <img src="https://img.shields.io/badge/License-LGPL--3-yellow.svg" alt="License">
 </p>
 
-<!-- markdownlint-enable MD033 -->
+<br>
 
 **Feature-rich, highly customizable third-party server software for Minecraft: Bedrock Edition.**
 
 - 🪄 **Custom Item, Block and Entity support**
 - 🤖 **Vanilla-like Mob AI**
-- 🪴 **Terra Generator**
+- 🪴 **Vanilla-like world generation**
 - ✏️ **Full Vanilla Command Support**
 - 🗃️ **Full Item, Block and Container Support**
 - 🗿 **More features to discover...**
 
-## Install
+## Getting Started
 
-1. Make sure you have `JDK21` installed, if not [download from here](https://www.graalvm.org/downloads)
-2. Download the [`powernukkitx.jar`](https://github.com/PowerNukkitX/PowerNukkitX/releases/download/snapshot/powernukkitx.jar)
-3. Get your start script [here](https://github.com/PowerNukkitX/scripts/tree/master)
-
-## Usage
-
-Starting PowerNukkitX
-
-```sh
-java -jar --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED .\powernukkitx.jar
-```
-
-If you use a newer java version (greater than 21) you have to use one of the [startup scripts.](https://github.com/PowerNukkitX/scripts/tree/master)
+To get started, check out our [documentation](https://powernukkitx.org/docs/).
 
 ## Community & Support
 
-Join our [Discord](https://discord.gg/apwd7uauZg) server to chat with other users and developers.
+Join our [Discord](https://discord.gg/apwd7uauZg) server to chat with other users, developers and server owners.
 
 ## 🤝 Contributing to PowerNukkitX
 
-Contributions, issues and feature requests are welcome!
-Feel free to
-check [issues page](https://github.com/PowerNukkitX/PowerNukkitX/issues). You can also take a look at
+Contributions, issues and feature requests are welcome!<br />Feel free to
+check [issues page](https://github.com/PowerNukkitX/PowerNukkitX/issues). Also take a look at
 the [contributing guide](.github/CONTRIBUTING.md).
-
-[![Contributors](https://contrib.rocks/image?repo=PowerNukkitX/PowerNukkitX)](https://github.com/PowerNukkitX/PowerNukkitX/graphs/contributors)
-
-## Give a ⭐️ if this project helped you
-
-[![Stargazers over time](https://starchart.cc/PowerNukkitX/PowerNukkitX.svg?variant=adaptive)](https://starchart.cc/PowerNukkitX/PowerNukkitX)
 
 ## 📝 License Information
 
 This project is licensed under LGPL-3.0. Please see the [LICENSE](/LICENSE) file for details.
+
+## Give a ⭐️ if this project helped you
+
+[![Contributors](https://contrib.rocks/image?repo=PowerNukkitX/PowerNukkitX)](https://github.com/PowerNukkitX/PowerNukkitX/graphs/contributors)
